feat: add route to get product by id.
